--- a/src/styles/custom/_customUtilities.scss
+++ b/src/styles/custom/_customUtilities.scss
@@ -1,1 +1,13 @@
 // Project-Specific Utility Classes
+
+.fw-400 {
+  font-weight: 400;
+}
+
+.fw-500 {
+  font-weight: 500;
+}
+
+.fw-700 {
+  font-weight: 700;
+}
