--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,6 +4,9 @@
 // Populate :root selector
 @use "./root";
 
+// Enable custom utility classes
+@use "./custom/customGlobal" as *;
+
 // Enable general utility classes
 @use "./utilities/index" as *;
 
