Style SearchBar component

--- a/src/styles/_config.scss
+++ b/src/styles/_config.scss
@@ -5,6 +5,7 @@
 // Colors
 $colors: (
   "white": hsl(0, 0%, 100%),
+  "black": hsl(0, 0%, 0%),
   "blue": hsl(224, 85%, 66%),
   "gray": (
     "200": hsl(0, 0%, 17%),
