--- a/src/components/IpDetails/IpDetails.module.scss
+++ b/src/components/IpDetails/IpDetails.module.scss
@@ -32,7 +32,7 @@
         --flow-space: 0.75rem;
 
         &:not(:first-child) {
-          padding-inline-start: 2rem;
+          padding-inline-start: min(2vw, 2rem);
 
           &::before {
             content: "";
