Add box shadow to SearchBar component

--- a/src/components/SearchBar/SearchBar.module.scss
+++ b/src/components/SearchBar/SearchBar.module.scss
@@ -6,6 +6,8 @@
 
   font-size: var(--fs-400);
 
+  box-shadow: 0 3.125rem 3.125rem -2rem rgb(0 0 0 / 0.098);
+
   input[type="search"] {
     border: 0;
     flex-grow: 1;
