--- a/src/components/IpDetails/IpDetails.module.scss
+++ b/src/components/IpDetails/IpDetails.module.scss
@@ -14,9 +14,19 @@
     padding: 2.375rem 2rem;
   }
 
-
   dl {
     --gap: 1.5rem;
+
+    animation: fade-in 0.5s ease;
+
+    @keyframes fade-in {
+      0% {
+        opacity: 0;
+      }
+      100% {
+        opacity: 1;
+      }
+    }
 
     @include breakpoints.mq(desktop) {
       text-align: start;
