--- a/src/components/SearchBar/SearchBar.module.scss
+++ b/src/components/SearchBar/SearchBar.module.scss
@@ -1,4 +1,5 @@
 .SearchBar {
+  position: relative;
   display: flex;
 
   border-radius: 1rem;
@@ -37,4 +38,16 @@
       background-color: hsl(var(--clr-gray-200));
     }
   }
+}
+
+.Hint {
+  position: absolute;
+  right: -8rem;
+  top: calc(100% + 0.5rem);
+
+  color: white;
+
+  border-radius: 1rem;
+
+  z-index: 1001;
 }
